kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-java-app
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-java-app
  template:
    metadata:
      labels:
        app: simple-java-app
    spec:
      containers:
      - name: simple-java-app
        image: devopstraining064/project4-demo-dockerimage:33
        ports:
        - containerPort: 8080
