kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-java-app-service
  namespace: demo-app
spec:
  selector:
    app: simple-java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
